// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`matches snapshot with multiple messages 1`] = `
<DocumentFragment>
  <div>
    <p
      id="err-container"
    >
      <span
        class="errors"
      >
        <img
          alt="warning error"
          class="err-img"
          src="warning.svg"
        />
        <span
          class="err-text"
        >
          INVALID PASSWORD/USERNAME.
        </span>
      </span>
      <span
        class="errors"
      >
        <img
          alt="warning error"
          class="err-img"
          src="warning.svg"
        />
        <span
          class="err-text"
        >
          EMAIL MUST BE IN EMAIL FORMAT.
        </span>
      </span>
    </p>
  </div>
</DocumentFragment>
`;

exports[`matches snapshot with one message 1`] = `
<DocumentFragment>
  <div>
    <p
      id="err-container"
    >
      <span
        class="errors"
      >
        <img
          alt="warning error"
          class="err-img"
          src="warning.svg"
        />
        <span
          class="err-text"
        >
          INVALID PASSWORD/USERNAME.
        </span>
      </span>
    </p>
  </div>
</DocumentFragment>
`;
